--- a/Student_Performance_Classification.ipynb
+++ b/Student_Performance_Classification.ipynb
@@ -1086,15 +1086,17 @@
    "id": "912b6529-41c1-483e-bd24-8ebe0eda5523",
    "metadata": {},
    "source": [
-    "Variável alvo: classe de classificação\n",
+    "**Classe Classe**: Classificação das notas dos alunos com base no GPA:\n",
     "\n",
-    "Classe Classe: Classificação das notas dos alunos com base no GPA:\n",
+    "- 0: 'A' (GPA >= 3.5)\n",
     "\n",
-    "0: 'A' (GPA >= 3.5)\n",
-    "1: 'B' (3.0 <= GPA < 3.5)\n",
-    "2: 'C' (2.5 <= GPA < 3.0)\n",
-    "3: 'D' (2.0 <= GPA < 2.5)\n",
-    "4: 'F' (GPA < 2.0)\n"
+    "- 1: 'B' (3.0 <= GPA < 3.5)\n",
+    "\n",
+    "- 2: 'C' (2.5 <= GPA < 3.0)\n",
+    "\n",
+    "- 3: 'D' (2.0 <= GPA < 2.5)\n",
+    "\n",
+    "- 4: 'F' (GPA < 2.0)\n"
    ]
   },
   {
